--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,8 @@
-language: swift
-osx_image: xcode9.2
+language: objective-c
+osx_image: xcode9.1
 xcode_project: YearlyProgress.xcworkspace
 xcode_scheme: YearlyProgress
 
-before_script:
+before_install:
     - gem install cocoapods --pre
+    - pod install
