--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: objective-c
 osx_image: xcode9.1
 xcode_project: YearlyProgress.xcworkspace
-xcode_scheme: YearlyProgress
+xcode_scheme: YearlyProgressUITests
 
 before_install:
     - pod install
