--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: objective-c
 osx_image: xcode9.1
-xcode_project: YearlyProgress.xcworkspace
+xcode_project: YearlyProgress.xcodeproj
 xcode_scheme: YearlyProgressUITests
 
 before_install:
