--- a/YearlyProgress/Settings.bundle/com.mono0926.LicensePlist.plist
+++ b/YearlyProgress/Settings.bundle/com.mono0926.LicensePlist.plist
@@ -14,6 +14,14 @@
 		</dict>
 		<dict>
 			<key>File</key>
+			<string>com.mono0926.LicensePlist/Eureka</string>
+			<key>Title</key>
+			<string>Eureka (4.0.1)</string>
+			<key>Type</key>
+			<string>PSChildPaneSpecifier</string>
+		</dict>
+		<dict>
+			<key>File</key>
 			<string>com.mono0926.LicensePlist/FontAwesome.swift</string>
 			<key>Title</key>
 			<string>FontAwesome.swift (1.3.2)</string>
@@ -49,6 +57,14 @@
 			<string>com.mono0926.LicensePlist/Neon</string>
 			<key>Title</key>
 			<string>Neon (0.4.0)</string>
+			<key>Type</key>
+			<string>PSChildPaneSpecifier</string>
+		</dict>
+		<dict>
+			<key>File</key>
+			<string>com.mono0926.LicensePlist/SwiftyUserDefaults</string>
+			<key>Title</key>
+			<string>SwiftyUserDefaults (3.0.1)</string>
 			<key>Type</key>
 			<string>PSChildPaneSpecifier</string>
 		</dict>
